# demos

./: .gitignore  README.md  pyproject.toml
MedicalChatbot/: HealthcareChatbotDemo (1).ipynb  HealthcareChatbotDemo(new).ipynb  HealthcareChatbotDemo.ipynb  results.csv
MilitaryAircraft/: MilitaryAircraftDemo(new).ipynb  MilitaryAircraftDemo.ipynb
MnistOnnxDemo/: MilitaryAircraftDemo.ipynb  MnistOnnxDemo.ipynb
